# ai_meeting_monitor

./: .gitignore  README.MD
backend/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  deps.py  routes.py
backend/app/core/: config.py  logger.py  security.py
backend/app/db/: migrations  session.py
backend/app/models/: meeting.py
backend/app/schemas/: meeting.py
backend/app/services/: analyzer.py  groq_service.py
backend/app/tests/: __init__.py  test_health.py
backend/app/utils/: helpers.py
backend/scripts/: init_db.sh  start.sh
frontend/: dashboard.html  index.html  live_meeting.html  upload.html
frontend/css/: styles.css
