[tool]
name = "AI Meeting Monitor"
version = "0.1.0"
description = "A backend service for monitoring and analyzing meetings using AI."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependencies]
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
python-dotenv = "^0.21.0"
pydantic = "^1.10.0"
aiofiles = "^0.8.0"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
mypy = "^0.910"
black = "^22.3.0"
isort = "^5.10.0"